增加统一访问前缀

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -34,7 +34,7 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://admin:${spring.security.user.password}@localhost:8761/eureka/
+      defaultZone: http://admin:${spring.security.user.password}@localhost:8761${server.servlet.context-path}/eureka/
 
 management:
   metrics:
