--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -43,7 +43,7 @@ eureka:
     instance-info-replication-interval-seconds: 10
     registry-fetch-interval-seconds: 10
     service-url:
-      defaultZone: http://admin:${spring.security.user.password:admin}@localhost:${server.port}/eureka/
+      defaultZone: http://admin:${spring.security.user.password:admin}@localhost:${server.port}${server.servlet.context-path}/eureka/
   instance:
     appname: jhipster-registry
     instanceId: jhipsterRegistry:${spring.application.instance-id:${random.value}}
@@ -174,6 +174,7 @@ server:
     session:
       cookie:
         http-only: true
+    context-path: /jhpster-registry
 
 springdoc:
   show-actuator: true
