增加统一访问前缀

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -174,7 +174,7 @@ server:
     session:
       cookie:
         http-only: true
-    context-path: /jhpster-registry
+    context-path: /jhipster-registry
 
 springdoc:
   show-actuator: true
